--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "react-select-async-paginate": "^0.7.2",
     "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.0"
   },
